--- a/css/styles.css
+++ b/css/styles.css
@@ -1,21 +1,89 @@
-body{
-  background-color: hsl(185, 75%, 39%);
+body {
   margin: 0;
-  text-align: center;
-}
-.card-box{
-  width: 25%;
-  margin: 0 auto;
-  background-color: white;
   position: relative;
+  text-align: center;
+  background-color: #19A2AE;
+  color: #969696;
+  font-size: 18px;
+  font-family: 'Kumbh Sans', sans-serif;
 }
-.pattern-card{
-width: 100%;
-  display: block;
+
+hr{
+  color: #969696;
 }
-.image-card{
-  display: block;
-  border: solid white 5px;
+
+h1, h2, h4 {
+  display: inline-block;
+  margin: 0;
+}
+
+h1 {
+  color: #2D3248;
+}
+
+h2 {
+  margin-left: 10px;
+}
+
+h3 {
+  color: #6A6F81;
+}
+
+.card-box {
+  width: 25%;
+  position: relative;
+  margin: 10% auto 0;
+  background-color: white;
+  border-radius: 15px;
+}
+
+#card-pattern {
+  width: 100%;
+  border-radius: 15px 15px 0 0;
+}
+
+#card-profile {
   border-radius: 50%;
-  margin: 0 auto;
+  position: relative;
+  bottom: 47px;
+  border: solid white 3px;
+  margin-bottom: -47px;
+}
+
+.no-need {
+  visibility: hidden;
+}
+
+.media-info {
+  margin: 0;
+  padding: 20px;
+  table-layout: fixed;
+  width: 100%;
+  font-size: 12px;
+}
+
+.top-pattern{
+  position: fixed;
+  top: -85%;
+  left: -25%;
+}
+
+.bottom-pattern{
+  display: block;
+  position: fixed;
+  right: -20%;
+  bottom: -85%;
+  z-index: -1;
+}
+
+.attribution {
+  font-size: 11px;
+  bottom: 0%;
+  position: fixed;
+  display: block;
+  left: 39%;
+}
+
+.attribution a {
+  color: #3E52A3;
 }
