--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,5 @@
 body {
   margin: 0;
-  position: relative;
   text-align: center;
   background-color: #19A2AE;
   color: #969696;
@@ -29,10 +28,18 @@ h3 {
   color: #6A6F81;
 }
 
-.card-box {
-  width: 25%;
+.container{
+  background-color: pink;
+  margin: 15% auto;
+  padding: 0;
+  width: 350px;
+  height: 400px;
   position: relative;
-  margin: 10% auto 0;
+}
+
+.card-box {
+  position: absolute;
+  width: 100%;
   background-color: white;
   border-radius: 15px;
 }
@@ -63,16 +70,16 @@ h3 {
 }
 
 .top-pattern{
-  position: fixed;
-  top: -85%;
-  left: -25%;
+  position: absolute;
+  right: 50%;
+  bottom: 30%;
+  z-index: -1;
 }
 
 .bottom-pattern{
-  display: block;
   position: fixed;
-  right: -20%;
-  bottom: -85%;
+  left: 55%;
+  top: 40%;
   z-index: -1;
 }
 
